fixed the alignment issues in car page

--- a/src/Css/footer.css
+++ b/src/Css/footer.css
@@ -4,6 +4,7 @@
     padding: 20px;
     width:100%;
     margin-top: 5vh;
+    cursor: pointer;
     /* margin-left: 5vw; */
   }
 
