--- a/src/Css/header.css
+++ b/src/Css/header.css
@@ -1,7 +1,6 @@
 .box{
   border:0px solid red;
   background-image: url("../Images/imgBg.jpg");
-  /* imgBg.jpg */
   height: 450px;
   width: 100%;
   background-size:cover;
@@ -14,14 +13,11 @@
     height:500px;
     width: 65vw;
     margin-left: 40vw;
-    margin-top: 6vh;
+    margin-top: 10vh;
     nimation: imgBox 3s ease-out infinite;
     
 }
 
-/* .imgBox img {
-  height: 60%;
-} */
 @keyframes imgBox {
     0% {
       transform: scale(1, 1);
